#####################################################
# Project Metadatas
#####################################################
[project]
name = "cookiecutterz"
description = "A cookiecutter extension providing template inheritance"
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
dependencies = ["cookiecutter>=2.3.0", "cruft>=2.15.0", "pdm>=2.15"]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'template-engine']
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/gravures/cookiecutterz"
source   = "https://github.com/gravures/cookiecutterz"

[project.scripts]
cookiecutter = "cookiecutterz.main:main"
cruft        = "cookiecutterz.cruft:main"

#####################################################
# PDM
#####################################################
[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = ["-e file:///${PROJECT_ROOT}"]

[project.entry-points.pdm]
pdm-cruft = "cookiecutterz.pdm:main"

[tool.pdm.version]
source         = "scm"
write_to       = "cookiecutterz/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "ruff==0.4.1",
    "basedpyright==1.10.3",
    "pre-commit==3.7.0",
    "tox-pdm>=0.7.2",
    "dead>=1.5.2",
    "pretty-errors>=1.2.25",
]
test = ["pytest", "hypothesis", "coverage[toml]", "tox>=4.0"]

[tool.pdm.scripts]
traceback   = "_traceback.py"
xrequire    = "pdm export -f requirements -o requirements.txt"
test        = "pytest -s -v -k {args}"
test_all    = "coverage run -m pytest"
test_typing = "pdm run basedpyright --stats ./src/cookiecutterz"
test_cover  = "coverage report"
tox_testme  = "tox --develop -r -e py"
pc_init     = "pre-commit install --install-hooks"
pc_update   = "pre-commit autoupdate"
pc_check    = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
dead        = "dead"
pc_clean    = "pre-commit clean && pre-commit gc"
deps        = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"

[tool.pdm.scripts.pc_safety]
composite = ["require", "pre-commit run python-safety-dependencies-check"]
